Creating app packages from a template, based on config details. This is now an app generator app. So meta.

--- a/assets/config.html
+++ b/assets/config.html
@@ -31,8 +31,8 @@
         display: inline;
       }
       #app-icon {
-        width: 20px;
-        height: 20px;
+        width: 40px;
+        height: 40px;
       }
     </style>
   </head>
@@ -45,46 +45,54 @@
         <input id="app-title" type="text" value="">
       </div>
       <div class="control">
-        <p>App icon:</p>
+        <label for="icon">App icon (512x512)</label>
+        <input id="icon-input" name="icon" type="file" accept="image/png, image/jpeg">
         <img id="app-icon" />
-        <input id="icon-input" type="file" accept="image/png, image/jpeg">
       </div>
       <div class="control">
         <p>Load URL:</p>
         <input id="app-url" type="text" value="" placeholder="http://">
       </div>
       <div class="control">
-        <button id="submit" type="submit" disabled>Save</button>
+        <button id="submit" type="submit">Create app</button>
       </div>
     </div>
     <script type="application/javascript">
       window.onload = () => {
         const { ipcRenderer } = require("electron");
-        let timeout;
+        let iconMain = null;
         let iconLarge = null;
         let iconSmall = null;
 
         const showStatus = (text, isError = false) => {
           const status = document.getElementById("status");
-          status.innerText = text;
+          status.innerHTML = text;
           if (isError) {
             status.setAttribute("data-error", true);
           } else {
             status.removeAttribute("data-error");
           }
           status.setAttribute("data-active", true);
-          hideStatusAfterDelay();
         }
 
-        const hideStatusAfterDelay = (delay = 3000) => {
-          clearTimeout(timeout);
-          timeout = setTimeout(() => {
-            const status = document.getElementById("status");
-            status.removeAttribute("data-active");
-            status.removeAttribute("data-error");
-            status.innerHTML = "&nbsp;";
-          }, delay);
+        const hideStatus = () => {
+          const status = document.getElementById("status");
+          status.removeAttribute("data-active");
+          status.removeAttribute("data-error");
+          status.innerHTML = "&nbsp;";
         };
+
+        const disableSubmit = () => {
+          const submit = document.getElementById("submit");
+          submit.setAttribute("disabled", true);
+          submit.innerText = "Please wait...";
+        }
+
+        const enableSubmit = () => {
+          const submit = document.getElementById("submit");
+          submit.removeAttribute("disabled");
+          submit.innerText = "Create app";
+        }
 
         const getBase64 = async (file, width, height) => {
           const bitmap = await createImageBitmap(file);
@@ -103,41 +111,39 @@
           return canvas.toDataURL("image/png");
         }
 
-        const getAppConfig = () => ipcRenderer.send("get-app-config");
-        const setAppConfig = (title, url, base64Large, base64Small) => ipcRenderer.send("set-app-config", title, url, base64Large, base64Small);
+        const createApp = (title, url, base64Main, base64Large, base64Small) => {
+          hideStatus();
+          disableSubmit();
+          ipcRenderer.send("create-app", title, url, base64Main, base64Large, base64Small);
+        };
 
-        ipcRenderer.on("get-app-config-response", (event, config) => {
-          document.getElementById("app-title").value = config.title;
-          document.getElementById("app-url").value = config.url;
-          document.getElementById("app-icon").src = `data:image/png;base64,${config.icon}`;
-          
-          document.getElementById("icon-input").onchange = async (event) => {
-            const { files } = event.target;
-            if (files.length > 0) {
-              iconLarge = await getBase64(files[0], 40, 40);
-              iconSmall = await getBase64(files[0], 20, 20);
-              document.getElementById("app-icon").src = iconSmall;
-            }
-          };
-
-          document.getElementById("submit").onclick = () => setAppConfig(
-            document.getElementById("app-title").value,
-            document.getElementById("app-url").value,
-            iconLarge,
-            iconSmall,
-          );
-          document.getElementById("submit").removeAttribute("disabled");
+        ipcRenderer.on("create-app-response", (event, releaseDir) => {
+          showStatus(`App created successfully, find the packaged application here:\n${releaseDir}`, false);
+          enableSubmit();
         });
 
-        ipcRenderer.on("set-app-config-response", (event, err) => {
-          if (err) {
-            showStatus(`Error saving preferences. ${err}`, true);
-          } else {
-            showStatus(`Preferences saved successfully`, false);
+        ipcRenderer.on("create-app-error", (event, err) => {
+          showStatus(`Error creating app. ${err}`, true);
+          enableSubmit();
+        });
+
+        document.getElementById("icon-input").onchange = async (event) => {
+          const { files } = event.target;
+          if (files.length > 0) {
+            iconMain = await getBase64(files[0], 512, 512);
+            iconLarge = await getBase64(files[0], 40, 40);
+            iconSmall = await getBase64(files[0], 20, 20);
+            document.getElementById("app-icon").src = iconLarge;
           }
-        });
+        };
 
-        getAppConfig();
+        document.getElementById("submit").onclick = () => createApp(
+          document.getElementById("app-title").value,
+          document.getElementById("app-url").value,
+          iconMain,
+          iconLarge,
+          iconSmall,
+        );
       }
     </script>
   </body>
